@@ -746,6 +746,20 @@ sub handle_xml
 	return $r;
 }
 
+sub registered
+{
+	my $self = shift;
+
+	# the sysop is registered!
+	return 1 if $self->call eq $main::myalias || $self->call eq $main::mycall;
+	
+	if ($main::reqreg) {
+		return $self->{registered};
+	} else {
+		return 1;
+	}
+}
+
 #no strict;
 sub AUTOLOAD
 {
