@@ -1,5 +1,6 @@
 08Dec21=======================================================================
 1. Backport console.pl scrolling and width management changes.
+2. Backport show/registered cmd format from mojo.
 06Dec21=======================================================================
 1. Fix show/register to allow query of individual calls as well as get a 
    complete list.
